Release/styles/maps.css
#contentContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
   justify-content: space-evenly;
}

#right {
   flex: 2;
}

#mapNavWrapper {
   display: flex;
   height: 100%;
   width: 150px;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: start;


}

#mapNav {
   background-color: #f2f2f2;
   flex-grow: 1;
   margin: 5px;
   display: flex;
   flex-direction: row;
}

#uni {
   text-align: center;
   vertical-align: middle;
}

#foldOutWrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 5px;
   background-color: transparent;
   color: transparent;
   height: 40px;
}

#foldOut {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 100%;
}

#foldOut div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 150px;
   margin: 2px;
   padding: 1px;
   height: 100%;
   -webkit-user-select: none;
   user-select: none;

}


#tabsWrapper {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
   /* height: 100%; */
   width: 100%;
}

.tabs {
   display: flex;
   background-color: white;
   width: 100%;
   justify-content: center;
   flex-grow: 1;
   align-items: center;
   border: white solid thin;
   border-right: black solid 5px;
   margin: 2px;
   cursor: pointer;
   transition: border-color 0.5s ease-in-out 0s;
   color: black;
   border: thin solid white;
   border-image: initial;
   -webkit-user-select: none;
   user-select: none;
}

#mapWrapper {
   width: auto;
   padding: 20px;
}

#map {
   width: 100%;
   height: 100%;
   text-align: center;
}



@media only screen and (max-width: 790px) {
   #tabsWrapper {
      flex-direction: row;
      align-items: center;
      justify-content: space-evenly;
      flex-wrap: nowrap;
   }

   #mapNavWrapper {
      width: 100%;
   }

   .tabs {
      height: 100%;
   }

   #contentContainer {
      flex-direction: column-reverse;
   }
}

